# fractol

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: fractol.h
src/: event.c  fractal.c  fractol.c
